--- a/signUp.html
+++ b/signUp.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,shrink-to-fit=no">
     <title>Registration Page</title>
     <!-- CSS links -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <script type="text/javascript" src="js/script.js"></script>
     <script href="js/bootstrap.min.js"></script>
 </head>
@@ -27,10 +27,10 @@
             <li class="navbar-item"><a class="nav-link" href="#">Services</a></li>
             <li class="navbar-item"><a class="nav-link" href="#">Report</a></li>
         </ul>
-      </div>  
+      </div>
     </div>
   </nav>
-    
+
   <!--header-->
   <!-- <header> -->
     <div class="container">
@@ -42,31 +42,31 @@
                 <label for="firstName" class="col-12 col-md-4 col-form-label">First Name</label>
                 <div class="col-12 col-md-8">
                   <input type="text" pattern="[A-Z]+[a-z]*" title="Use CamelCase e.g. Joe" class=" form-control" id="firstName" name="firstName" placeholder="First Name" required/>
-                </div>   
+                </div>
             </div>
             <div class="form-group row">
                 <label for="middleName" class="col-12 col-md-4 col-form-label">Middle Name</label>
                 <div class="col-12 col-md-8">
                   <input type="text" pattern="[A-Z]+[a-z]*" title="Use CamelCase e.g. Joe" class=" form-control" id="middleName" name="middleName" placeholder="Middle Name"/>
-                </div>   
+                </div>
             </div>
             <div class="form-group row">
                 <label for="lastName" class="col-12 col-md-4 col-form-label">Last Name</label>
                 <div class="col-12 col-md-8">
                   <input type="text" pattern="[A-Z]+[a-z]*" title="Use CamelCase e.g. Joe" class=" form-control" id="lastName" name="lastName" placeholder="Last Name" required/>
-                </div>   
+                </div>
             </div>
             <div class="form-group row">
                 <label for="emailId" class="col-12 col-md-4 col-form-label">E-mail Id</label>
                 <div class="col-12 col-md-8">
                   <input type="email" class=" form-control" id="emailId" name="emailId" placeholder="joe@gmail.com" required/>
-                </div>   
+                </div>
             </div>
             <div class="form-group row">
                 <label for="contact" class="col-12 col-md-4 col-form-label">Contact No.</label>
                 <div class="col-12 col-md-8">
                   <input type="tel" minlength="10" maxlength="10" class="form-control" id="contact" name="contact" placeholder="9********0" required/>
-                </div>   
+                </div>
             </div>
             <div class="form-group row">
                 <label for="verificationCode" class="col-12 col-md-4 col-form-label">Verify Code</label>
@@ -82,12 +82,12 @@
                 <div class="col-12 offset-4 ">
                     <button type="submit" class="btn btn-md btn-success">Sign Up</button>
                     <button type="reset" class="btn btn-md btn-primary">Reset</button>
-                </div>      
+                </div>
             </div>
           </form>
         </div>
     </div>
-  </div>  
+  </div>
   <!-- </header> -->
 
   <!-- Footer -->
