--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <a href="#">Online Register</a>
   <a href="#">State Integration</a>
   <a href="#">Services</a>
-  <a href="#">Reports</a>
+  <a href="Mis.html">MIS Report</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
@@ -75,7 +75,7 @@ Type the number:<br>
 
                           <button type="submit" name="submit" class="btn btn-success">Submit</button>&nbsp;&nbsp;
                                 <button type="submit" name="submit" class="btn btn-success">Reset</button>
-                                   <br><br><center>  <a href="signupUser">Create an Account</a> &nbsp;&nbsp;
+                                   <br><br><center>  <a href="signUp.html">Create an Account</a> &nbsp;&nbsp;
        <a href="forgotPassword">Forgot Password?</a></center>
                                 </form><br/>
                                 <script type="text/javascript">
@@ -128,7 +128,7 @@ return string.split(' ').join('');
 
 </div>
 
-  
+
 </form>
   </div>
 
