--- a/Mis.html
+++ b/Mis.html
@@ -56,7 +56,7 @@
             </div>
 
         <!-- Custom code Kiran Nayak -->
-        <div class="content cf">
+        <!--<div class="content cf">
             <div class="sidePanel">
                 <div class="dash"> <span><i class="fa fa-tachometer"></i></span>
                                     <a title="Home" style="color: #FFF;text-decoration:none;" href="/userdash/dashboard"> DASHBOARD </a>
@@ -66,7 +66,7 @@
                     <ul id="multiMenu" class="multiMenu">
                         <li class=""><a href=" ">Apply for New LIN</a></li><li class=""><a href=" ">LIN Status</a></li><li class=""><a href="#">Registration</a><ul><li class=""><a href="  ">Registration For EPFO-ESIC</a></li><li class=""><a href=" ">Registration for CLC</a></li></ul></li><li class=""><a href=" ">License Under CLRA/ISMW</a></li><li class=""><a href="#">Establishments</a><ul><li class=""><a href=" ">Linked Establishments</a></li><li class=""><a href=" ">LIN Profile Update</a></li><li class=""><a href=" ">Duplicate LIN Removal</a></li><li class=""><a href=" ">Duplicate LIN Removal Request List</a></li></ul></li><li class=""><a href="#">Annual Return under Central Acts</a><ul><li class=""><a href="#">CLC Annual Return</a><ul><li class=""><a href=" ">File New Return</a></li><li class=""><a href=" ">View Filed Return</a></li></ul></li><li class=""><a href="#">DGMS Annual Return</a><ul><li class=""><a href=" ">File New Return</a></li><li class=""><a href=" ">View Filed Return</a></li></ul></li></ul></li>                                            </ul>
                 </div>
-            </div>
+            </div>-->
         
     <!--==================================Main Panel===============================-->
     <div class="mainPanel  leftPadRem">
@@ -100,9 +100,9 @@
 <div class="cf">
                 <div class="col-lg-12 justify">
 
-<p class="justify">Welcome to the Unified Shram Suvidha Portal of the Ministry of Labour & Employment.</p>
+<p class="justify">Welcome to the astorianz Portal of the Ministry of Labour & Employment.</p>
 
-<p class="justify">You have successfully created your Shram Suvidha Account. You can now link your establishments with this account. You can link multiple establishments represented by you with this single Shram Suvidha Account. These establishments would be linked with this account after verification by the respective labour enforcement agency (e.g. CLC, EPFO, ESIC, and DGMS). You can avail the following services through the Unified Astroian labour Portal</p>
+<p class="justify">You have successfully created your Astroianz Account. You can now link your establishments with this account. You can link multiple establishments represented by you with this single Astroianz Account. These establishments would be linked with this account after verification by the respective labour enforcement agency (e.g. CLC, EPFO, ESIC, and DGMS). You can avail the following services through the Unified Astroian labour Portal</p>
 
 <ol>
     <li>Common Registration under EPFO & ESIC</li>
