new changes in mis file

--- a/Mis.html
+++ b/Mis.html
@@ -56,17 +56,49 @@
             </div>
 
         <!-- Custom code Kiran Nayak -->
-        <!--<div class="content cf">
+        <div class="content cf">
             <div class="sidePanel">
                 <div class="dash"> <span><i class="fa fa-tachometer"></i></span>
-                                    <a title="Home" style="color: #FFF;text-decoration:none;" href="/userdash/dashboard"> DASHBOARD </a>
+                                    <a title="Home" style="color: #000000;text-decoration:none;" href="/userdash/dashboard"> DASHBOARD </a>
                                 </div>
                 <div class="accordianMenu">
 
-                    <ul id="multiMenu" class="multiMenu">
-                        <li class=""><a href=" ">Apply for New LIN</a></li><li class=""><a href=" ">LIN Status</a></li><li class=""><a href="#">Registration</a><ul><li class=""><a href="  ">Registration For EPFO-ESIC</a></li><li class=""><a href=" ">Registration for CLC</a></li></ul></li><li class=""><a href=" ">License Under CLRA/ISMW</a></li><li class=""><a href="#">Establishments</a><ul><li class=""><a href=" ">Linked Establishments</a></li><li class=""><a href=" ">LIN Profile Update</a></li><li class=""><a href=" ">Duplicate LIN Removal</a></li><li class=""><a href=" ">Duplicate LIN Removal Request List</a></li></ul></li><li class=""><a href="#">Annual Return under Central Acts</a><ul><li class=""><a href="#">CLC Annual Return</a><ul><li class=""><a href=" ">File New Return</a></li><li class=""><a href=" ">View Filed Return</a></li></ul></li><li class=""><a href="#">DGMS Annual Return</a><ul><li class=""><a href=" ">File New Return</a></li><li class=""><a href=" ">View Filed Return</a></li></ul></li></ul></li>                                            </ul>
+            <ul id="multiMenu" class="multiMenu">
+                        <li class=""><a href=" ">Apply for New LIN</a></li>
+                        <li class=""><a href=" ">LIN Status</a></li>
+                        <li class=""><a href="#">Registration</a>
+                    <ul>
+                    	<li class=""><a href="  ">Registration For EPFO-ESIC</a></li>
+                    	<li class=""><a href=" ">Registration for CLC</a></li>
+                    </ul>
+                        </li>
+                <li class=""><a href=" ">License Under CLRA/ISMW</a></li>
+                <li class=""><a href="#">Establishments</a>
+                	<ul>
+                		<li class=""><a href=" ">Linked Establishments</a></li>
+                		<li class=""><a href=" ">LIN Profile Update</a></li>
+                		<li class=""><a href=" ">Duplicate LIN Removal</a></li>
+                		<li class=""><a href=" ">Duplicate LIN Removal Request List</a></li>
+                	</ul>
+                </li>
+                <li class=""><a href="#">Annual Return under Central Acts</a>
+                	<ul>
+                		<li class=""><a href="#">CLC Annual Return</a>
+                	<ul>
+                		<li class=""><a href=" ">File New Return</a></li>
+                		<li class=""><a href=" ">View Filed Return</a></li>
+                	</ul>
+                </li>
+                <li class=""><a href="#">DGMS Annual Return</a>
+                	<ul>
+                		<li class=""><a href=" ">File New Return</a></li>
+                		<li class=""><a href=" ">View Filed Return</a></li>
+                	</ul>
+                </li>
+            </ul>
+        </li>                                            </ul>
                 </div>
-            </div>-->
+            </div>
         
     <!--==================================Main Panel===============================-->
     <div class="mainPanel  leftPadRem">
